<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Samsung Remote</string>

    <!-- Main Activity -->
    <string name="search_tv">Rechercher une TV</string>
    <string name="searching">Recherche en cours…</string>
    <string name="no_tv_found">Aucune TV Samsung trouvée</string>
    <string name="tv_found">TV trouvée: %1$s</string>
    <string name="connect">Connecter</string>
    <string name="disconnect">Déconnecter</string>
    <string name="manual_ip">Entrer IP manuellement</string>
    <string name="scan_network">Scanner le réseau</string>
    <string name="scanning_network">Scan du réseau…</string>
    <string name="manual_ip_dialog_title">Entrer l\'IP de la TV</string>
    <string name="manual_ip_dialog_message">Entrez l\'adresse IP de votre TV Samsung.\nVous pouvez la trouver dans les paramètres réseau de votre TV.</string>
    <string name="ip_hint">192.168.1.xxx</string>
    <string name="invalid_ip">Adresse IP invalide</string>
    <string name="checking_ip">Vérification de l\'IP…</string>

    <!-- Pairing Activity -->
    <string name="pairing_title">Appairage avec la TV</string>
    <string name="enter_pin">Entrez le code PIN affiché sur votre TV</string>
    <string name="pin_hint">Code PIN</string>
    <string name="pair">Appairer</string>
    <string name="pairing_failed">Échec de l\'appairage</string>
    <string name="pairing_success">Appairage réussi!</string>

    <!-- Remote Control Activity -->
    <string name="remote_control">Télécommande</string>
    <string name="power">Power</string>
    <string name="volume_up">Vol +</string>
    <string name="volume_down">Vol -</string>
    <string name="channel_up">Ch +</string>
    <string name="channel_down">Ch -</string>
    <string name="mute">Mute</string>
    <string name="home">Home</string>
    <string name="back">Retour</string>
    <string name="menu">Menu</string>
    <string name="source">Source</string>
    <string name="tools">Outils</string>
    <string name="info">Info</string>
    <string name="enter">Entrée</string>
    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="ok">OK</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="rewind">Reculer</string>
    <string name="forward">Avancer</string>

    <!-- Numbers -->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>

    <!-- Voice Input -->
    <string name="voice_input">Saisie vocale</string>
    <string name="voice_input_listening">Parlez maintenant…</string>
    <string name="voice_input_ready">Appuyez pour parler</string>
    <string name="voice_input_error">Erreur de reconnaissance vocale</string>
    <string name="voice_input_no_text">Aucun texte reconnu</string>
    <string name="voice_input_permission_denied">Permission microphone refusée</string>
    <string name="send">Envoyer</string>
    <string name="cancel">Annuler</string>
    <string name="voice_input_sent">Texte envoyé à la TV</string>

    <!-- Debug Mode -->
    <string name="debug_logs">Logs de Débogage</string>
    <string name="copy_all">Copier</string>
    <string name="clear_logs">Effacer</string>
    <string name="auto_scroll">Auto-scroll</string>
    <string name="close">Fermer</string>
    <string name="debug_mode">Mode Debug</string>
    <string name="view_logs">Voir les logs</string>
    <string name="logs_copied">Logs copiés dans le presse-papiers</string>
    <string name="log_copied">Log copié dans le presse-papiers</string>

    <!-- Errors -->
    <string name="error_connection">Erreur de connexion</string>
    <string name="error_send_command">Erreur lors de l\'envoi de la commande</string>
    <string name="wifi_required">Veuillez vous connecter au même réseau Wi-Fi que votre TV</string>
</resources>
